--- a/index4.html
+++ b/index4.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/css/mdb.min.css" rel="stylesheet">
-<!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/js/mdb.min.js"></script>
+    <title>Jquery</title>
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
-        <button class="btn peach-gradient">Peach</button>
-        <button class="btn purple-gradient">Purple</button>
-        <button class="btn blue-gradient">Blue</button>
-        <button class="btn aqua-gradient">Aqua</button>
+
+    <script>
+        $().ready(function(){
+            $('div').html('<h2 style="color:red;">Hola Jquery</h2>');
+            $('#texto-id').text('<h2 style="color:red;">Hola Jquery</h2>');
+            $('.texto-class').html('<span style="color:blue;">Hola Jquery</span>');
+            $('#parrafo').mouseover(function(){
+                $('#parrafo').css('background-color', 'red');
+                $('#parrafo').css('color', 'white');
+            });
+            $('#parrafo').mouseout(function(){
+                $('#parrafo').css('background-color', 'blue');
+                $('#parrafo').css('color', 'cyan');
+            });
+        })
+        
+        
+    </script>
+
+<div></div>
+<p id="texto-id"> </p>
+<p class="texto-class"> </p>
+
+<p id="parrafo"> 
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi explicabo eligendi temporibus ipsa non cumque perspiciatis odio? Autem minus facilis minima similique iste ut dicta nostrum incidunt eaque nulla. Quaerat?
+</p>
 </body>
 </html>
