--- a/jquery ayax.html
+++ b/jquery ayax.html
@@ -9,17 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
         </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
 </head>
@@ -29,20 +19,43 @@
     <div class="container">
         <h1>Formulario de envío</h1>
         
-        <form>
+        <form novalidate>
             <div class="form-group">
                 <label for="nombre">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Entre su nombre">
+                <input type="text" class="form-control" onblur="validar(this)" id="nombre" placeholder="Entre su nombre">
             </div>
+                <div id="error-nombre" class=" alert alert-danger">
+                    Campo no valido
+                </div>
             <div class="form-group">
                 <label for="apellido">Apellido</label>
-                <input type="text" class="form-control" id="apellido" placeholder="Entre su apellido">
+                <input type="text" class="form-control" onblur="validar(this)" id="apellido" placeholder="Entre su apellido">
             </div>
+                <div id="error-apellido" class=" alert alert-danger">
+                    Campo no valido
+                </div>
+            <div class="form-group">
+                    <label for="edad">Edad</label>
+                    <input type="number" class="form-control" onblur="validar(this)" id="edad" placeholder="Entre su edad">
+            </div>
+                <div id="error-edad" class=" alert alert-danger">
+                    Campo no valido
+                </div>
             <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" placeholder="Entre su email">
+                    <input type="text" class="form-control" onblur="validar(this)" id="email" placeholder="Entre su email">
+            </div>
+                <div id="error-email" class=" alert alert-danger">
+                    Campo no valido
                 </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <div class="form-group">
+                        <label for="password">Email</label>
+                        <input type="password" class="form-control" onblur="validar(this)" id="password" placeholder="Entre su password">
+            </div>
+                <div id="error-password" class=" alert alert-danger">
+                    Campo no valido
+                </div>
+            <button type="button" id="enviar" class="btn btn-primary">Enviar</button>
         </form>
         <div class="jumbotron mt-3">
                 <button class="btn btn-sucess" id="leer-datos">Leer Datos</button>
@@ -51,12 +64,39 @@
     </div>
 
     <script>
+
+        var datosFormulario={};
+
+        function validar(e){
+                //console.log(e);
+                var id=e.id;
+                var dato=$('#'+id).val();
+                console.log(id, dato);
+                if (dato!=""){
+                    $('#error-' + id).hide();
+                    datosFormulario[id] = dato;
+                }
+                else {
+                    $('#error-' + id).show();
+                }
+                
+            }
         $(document).ready(function () {
 
             var usuario = {
                 nombre: "Paula",
                 edad: 32
             };
+
+            $('#enviar').click(function(){
+                console.log(datosFormulario);
+                if(Object.keys(datosFormulario).length==5){
+                    console.log('Ok envio');
+                    enviarDatosPost(datosFormulario);
+                    datosFormulario={};
+                    $('form')[0].reset();
+                }               
+            })
 
             function leerDatosPost(usuario) {
                 $.ajax({
@@ -91,12 +131,20 @@
             $('#leer-datos').click(function () {
                 leerDatosPost(usuario);
             })
-            //console.log('documento listo!');
 
             $('#enviar-datos').click(function () {
                 enviarDatosPost(usuario);
             })
-            console.log('documento listo!');
+
+            /*$('#nombre').blur(function(){
+                console.log('blur nombre');
+            })*/
+
+            $('#error-nombre').hide();
+            $('#error-apellido').hide();
+            $('#error-edad').hide();
+            $('#error-email').hide();
+            $('#error-password').hide();
         })
 
 
